--- a/SignUp.html
+++ b/SignUp.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);">
+    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px">
         <div>
             <h1>Sign Up</h1>
         </div>
