--- a/SignUp.html
+++ b/SignUp.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px">
+    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px " method="post">
         <div>
             <h1>Sign Up</h1>
         </div>
@@ -16,6 +16,7 @@
                 <input type="text" name="name" id="name" required>
             </div>
             <br>
+
             <div class="email">
                 <label for="email">Email</label>
                 <input type="email" name="email" id="email" required>
