--- a/login.html
+++ b/login.html
@@ -12,7 +12,7 @@
         text-align: center; 
     }
     </style>
-    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action="login.html" method="post" >
+    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action="sign up.html" method="post" >
 
     <div>
     <div>
@@ -27,6 +27,7 @@
         <br>
     <input type="submit" value="login ">
         <input type="reset" value="reset  ">
+        <input type="submit" value="sign up">
     </div>
 </form>
 </body>
