--- a/login.html
+++ b/login.html
@@ -2,18 +2,12 @@
 <html>
 <head>
     <meta charset="utf - 8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login </title>
 <body>
-    <style>
-            body {
-        background-color: rgba(111, 73, 164, 0.946); 
-        font-family: Sofia;
-        font-size: 20px;
-        color: rgba(18, 17, 19, 0.96);
-        text-align: center; 
-    }
-    </style>
-    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action="sign up.html" method="post" >
 
+    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action=" method="post" >
+        <h2 style="text-align: center;">LOGIN NOW</h2>
     <div>
     <div>
         <label>Email Addres:</label>
@@ -25,11 +19,17 @@
         <input type="password" required placeholder="password" name="password" >
     </div>
         <br>
-    <input type="submit" value="login ">
+        <input type="submit" value="login ">
         <input type="reset" value="reset  ">
-        <input type="submit" value="sign up">
+        <br>
+        <hr>
+        <span>don’t have an account?</span>
+        <a href="SignUp.html" class="#">sign up</a>
+
+
     </div>
 </form>
 </body>
 </head>
 </html>
+
