renew admin signup link to Admin_Home.html
suiiiiii...

--- a/SignUp.html
+++ b/SignUp.html
@@ -55,7 +55,7 @@
             <br>
 
             <button type="reset">Reset</button>
-            <button type="submit" name="is_admin"><a href="admin_page.html">Is_Admin</a></button>
+            <button type="submit" name="is_admin"><a href="Admin_Home.html">Is_Admin</a></button>
             <button type="submit" name="is_user"><a href="user_page.html">Is_User</a></button>
             <br>
             <hr>
