--- a/Admin_Home.html
+++ b/Admin_Home.html
@@ -15,8 +15,16 @@
             <a href="adminAddBooks.html">Add Books</a>
             <a href="adminEditBooks.html">Edit Books</a>
             <a href="adminDeleteBooks.html">Delete Books</a>
-            <a href="adminSearchBooks.html">Search For Books</a>
-            <a href="login.html">Log out</a>
+              <a href="login.html">Log out</a>
         </nav>
+        
+        <h1>Search</h1>
+        <h2>Search For Book In Library</h2>
+        <hr>
+        <form action="" method="post">
+                <input type="search" placeholder="Search Book Name Or Id" required>
+                <input type="submit" value="search">
+        </form>
+
     </body>
 </html>
