--- a/adminEditBooks.html
+++ b/adminEditBooks.html
@@ -15,10 +15,36 @@
             <a href="adminAddBooks.html">Add Books</a>
             <a href="adminEditBooks.html">Edit Books</a>
             <a href="adminDeleteBooks.html">Delete Books</a>
-            <a href="adminSearchBooks.html">Search For Books</a>
             <a href="login.html">Log out</a>
         </nav>
             
+        </form>
+        <h1>Edit</h1>
+        <h2>Edit Book From Library</h2>
+        <hr>
+        <form action="" method="post">
+                <input type="search" placeholder="Search Book Name Or Id" required>
+                <input type="submit" value="search">
+        </form>
+        <hr>
+        <div>
+            <b>Book Cover: </b>
+            <br>
+            <img src="" alt="">
+            <hr>
+            <b>Book Name: </b>
+            <br>
+            <b>Book Id: </b>
+            <br>
+            <b>Author Name: </b>
+            <br>
+            <b>Category:</b>
+            <br>
+            <b>Description:</b>
+        </div>
+        <br><hr><br>
+        <form action="">
+            <input type="submit" value="edit">
         </form>
     </body>
 </html>
