--- a/User_Home.html
+++ b/User_Home.html
@@ -20,5 +20,7 @@
                                         </nav>
                     </center>
                     <center><h1>HOME</h1></center>
+                    <center><img src="wallpaperflare.com_wallpaper.jpg" alt=""></center>
+
 </body>
 </html>
