--- a/userViewList.html
+++ b/userViewList.html
@@ -53,6 +53,114 @@
 <td>Anas</td>
 <td>5/5/2005</td>
 </tr>
+<tr>
+                    <td>Whispers in the Wind</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>The Midnight Chronicles</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>Beyond the Horizon</td>
+                    <td>Not Available</td>
+                    <td>Tarek</td>
+                    <td>20/4/2023</td>
+                    </tr>
+                    <tr>
+                    <td>Shadows of Destiny</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>The Forgotten Key</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>Serenade of Silence</td>
+                    <td>Not Available</td>
+                    <td>Mohsen</td>
+                    <td>5/2/2024</td>
+                    </tr>
+                    <tr>
+                    <td>Twilight's Embrace</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>Dreams of Distant Shores</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>The Last Enchantment</td>
+                    <td>Not Available</td>
+                    <td>Nour</td>
+                    <td>25/2/2022</td>
+                    </tr>
+                    <tr>
+                    <td>Symphony of Stars</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>Secrets of the Solstice</td>
+                    <td>Not Available</td>
+                    <td>Seif</td>
+                    <td>5/5/2023</td>
+                    </tr>
+                    <tr>
+                    <td>Echoes of the Ancients</td>
+                    <td>Not Available</td>
+                    <td>Ziad</td>
+                    <td>21/9/2023</td>
+                    </tr>
+                    <tr>
+                    <td>The Oracle's Quest</td>
+                    <td>Not Available</td>
+                    <td>Mahdi</td>
+                    <td>12/12/2023</td>
+                    </tr>
+                    <tr>
+                    <td>Voyage of the Valkyries</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>The Whispering Woods</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>Legends of Luminara</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>Mist of Memories</td>
+                    <td>Available</td>
+                    <td>----</td>
+                    <td>-----</td>
+                    </tr>
+                    <tr>
+                    <td>The Enchanted Emporium</td>
+                    <td>Not Available</td>
+                    <td>Waled</td>
+                    <td>4/4/2023</td>
+                    </tr>
 </tbody>
 </table>
 
