--- a/Admin_Home.html
+++ b/Admin_Home.html
@@ -10,13 +10,15 @@
     </head>
 
     <body>
-        <nav>
-            <a href="Admin_Home.html">Home</a>
-            <a href="adminAddBooks.html">Add Books</a>
-            <a href="adminEditBooks.html">Edit Books</a>
-            <a href="adminDeleteBooks.html">Delete Books</a>
-              <a href="login.html">Log out</a>
-        </nav>
+<center>
+    <nav>
+        <a href="Admin_Home.html">Home</a>
+        <a href="adminAddBooks.html">Add Books</a>
+        <a href="adminEditBooks.html">Edit Books</a>
+        <a href="adminDeleteBooks.html">Delete Books</a>
+          <a href="login.html">Log out</a>
+    </nav>
+</center>
         
         <h1>Search</h1>
         <h2>Search For Book In Library</h2>
@@ -25,6 +27,8 @@
                 <input type="search" placeholder="Search Book Name Or Id" required>
                 <input type="submit" value="search">
         </form>
+        <br>
+        <center><img  src="wp9167352.jpg" alt=""></center>
 
     </body>
 </html>
