--- a/SignUp.html
+++ b/SignUp.html
@@ -56,7 +56,7 @@
 
             <button type="reset">Reset</button>
             <button type="submit" name="is_admin"><a href="Admin_Home.html">Is_Admin</a></button>
-            <button type="submit" name="is_user"><a href="user_page.html">Is_User</a></button>
+            <button type="submit" name="is_user"><a href="user_Home.html">Is_User</a></button>
             <br>
             <hr>
             <span>if you have an account?</span>
