--- a/adminAddBooks.html
+++ b/adminAddBooks.html
@@ -11,12 +11,15 @@
 
     <body>
         <nav>
-            <a href="Admin_Home.html">Home</a>
-            <a href="adminAddBooks.html">Add Books</a>
-            <a href="adminEditBooks.html">Edit Books</a>
-            <a href="adminDeleteBooks.html">Delete Books</a>
-                <a href="login.html">Log out</a>
-        </nav>
+<center>
+    <nav>
+        <a href="Admin_Home.html">Home</a>
+        <a href="adminAddBooks.html">Add Books</a>
+        <a href="adminEditBooks.html">Edit Books</a>
+        <a href="adminDeleteBooks.html">Delete Books</a>
+          <a href="login.html">Log out</a>
+    </nav>
+</center>
 
         <h1>Add Books</h1>
         <h2>Add Book to Library</h2>
