--- a/adminEditBooks.html
+++ b/adminEditBooks.html
@@ -10,13 +10,15 @@
     </head>
 
     <body>
-        <nav>
-            <a href="Admin_Home.html">Home</a>
-            <a href="adminAddBooks.html">Add Books</a>
-            <a href="adminEditBooks.html">Edit Books</a>
-            <a href="adminDeleteBooks.html">Delete Books</a>
-            <a href="login.html">Log out</a>
-        </nav>
+<center>
+    <nav>
+        <a href="Admin_Home.html">Home</a>
+        <a href="adminAddBooks.html">Add Books</a>
+        <a href="adminEditBooks.html">Edit Books</a>
+        <a href="adminDeleteBooks.html">Delete Books</a>
+          <a href="login.html">Log out</a>
+    </nav>
+</center>
             
         </form>
         <h1>Edit</h1>
