--- a/login.html
+++ b/login.html
@@ -31,5 +31,37 @@
 </form>
 </body>
 </head>
-</html>
+</html><!DOCTYPE html>
+<html>
+<head>
+    <meta charset="utf - 8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login </title>
+<body>
 
+    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action=" method="post" >
+        <h2 style="text-align: center;color:white;">LOGIN NOW</h2>
+    <div>
+    <div>
+        <label style="color: white;">Email Addres:</label>
+        <input type="email" required placeholder="email" name="email" >
+        </div>
+        <br>
+        <div>
+        <label style="color: white;">password:</label>
+        <input type="password" required placeholder="password" name="password" >
+    </div>
+        <br>
+        <input type="submit" value="login ">
+        <input type="reset" value="reset  ">
+        <br>
+        <hr>
+        <span style="color: white;">don’t have an account?</span>
+        <a href= "SignUp.html" style="color: bisque;" class="#">sign up  </a> 
+
+
+    </div>
+</form>
+</body>
+</head>
+</html>
