--- a/User_Home.html
+++ b/User_Home.html
@@ -7,12 +7,13 @@
     <meta name="title" content="library">
     <meta name="description" content="Online Book library">
 
-
+    <link rel="stylesheet" href="../css/normalize.css">
+    <link rel="stylesheet" href="../css/all.min.css">
+    <link rel="stylesheet" href="user.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
-    <link rel="stylesheet" href="user.css">
 
 
 </head>
@@ -32,7 +33,7 @@
                                 <li><a href="userSelectBook.html">Select a book</a></li>
                                 <li><a href="userBorrowBook.html">Borrow Books</a></li>
                                 <li><a href="userBookList.html">Your Book</a></li>
-                                <li><a href="login.html">Log out</a></li>
+                                <li><a href="../register/login.html">Log out</a></li>
                             </ul>
                             <div class="form">
                                 <i class="fas fa-search"></i>
@@ -90,7 +91,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs/images.jpg" width="250" height="300" alt="Dear Life" class="img-cover">
+                                        <img src="../imgs/images.jpg" width="250" height="300" alt="Dear Life" class="img-cover">
                                     </figure>
                                     <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
@@ -110,7 +111,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs\71FYHIsnVIL._AC_UF1000,1000_QL80_.jpg" width="250" height="300" alt="The Remains Of The Day" class="img-cover">
+                                        <img src="../imgs\71FYHIsnVIL._AC_UF1000,1000_QL80_.jpg" width="250" height="300" alt="The Remains Of The Day" class="img-cover">
                                     </figure>
 ]                                    <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
@@ -129,7 +130,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs\81-y8fgFTTL._AC_UF1000,1000_QL80_.jpg" width="250" height="300" alt="Tenth Of December" class="img-cover">
+                                        <img src="../imgs\81-y8fgFTTL._AC_UF1000,1000_QL80_.jpg" width="250" height="300" alt="Tenth Of December" class="img-cover">
                                     </figure>
 ]                                    <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
@@ -148,7 +149,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs\91NtvTU0xEL._AC_UF1000,1000_QL80_.jpg" width="250" height="300" alt="Things Fall Apart" class="img-cover">
+                                        <img src="../imgs\91NtvTU0xEL._AC_UF1000,1000_QL80_.jpg" width="250" height="300" alt="Things Fall Apart" class="img-cover">
                                     </figure>
 ]                                    <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
@@ -167,7 +168,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs\18342.png" width="250" height="300" alt="It" class="img-cover">
+                                        <img src="../imgs\18342.png" width="250" height="300" alt="It" class="img-cover">
                                     </figure>
 \                                    <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
@@ -185,7 +186,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs\662597.png" width="250" height="300" alt="Cut" class="img-cover">
+                                        <img src="../imgs\662597.png" width="250" height="300" alt="Cut" class="img-cover">
                                     </figure>
                                     <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
@@ -204,7 +205,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs\15811545.jpg" width="250" height="300" alt="A Tale For The Time Being" class="img-cover">
+                                        <img src="../imgs\15811545.jpg" width="250" height="300" alt="A Tale For The Time Being" class="img-cover">
                                     </figure>
                                     <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
@@ -223,7 +224,7 @@
                             <div class="card">
                                 <div class="card-banner">
                                     <figure class="img-holder" style="--width:250; --height:300;">
-                                        <img src="imgs\Z.png" width="250" height="300" alt="Yellow Face" class="img-cover">
+                                        <img src="../imgs\Z.png" width="250" height="300" alt="Yellow Face" class="img-cover">
                                     </figure>
                                     <button class="icon-btn fav-btn " aria-label="add to favorite">
                                         <span class="material-symbols-rounded" aria-hidden="true">favorite</span>
