--- a/userSelectBook.html
+++ b/userSelectBook.html
@@ -8,56 +8,49 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
-
                     <meta charset="UTF-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <title>user book List</title>
+                    <title>user select book</title>
 </head>
 <body>
   <div class="body-color">
-  <header>    
-    <div class="container">
-        <a href="#" class="logo">
-            <img decoding="async" src="imgs/Icon.png" alt="Logo" />
-        </a>
-        <nav>
-            <i class="fas fa-bars toggle-menu"></i>
-            <ul>
-                <li><a class="active" href="User_Home.html">Home</a></li>
-                <li><a href="userSearchBooks.html">Search</a></li>
-            <li><a href="userViewList.html">View List</a></li>
-            <li><a href="userSelectBook.html">Select a book</a></li>
-            <li><a href="userBorrowBook.html">Borrow Books</a></li>
-            <li><a href="userBookList.html">Your Books</a></li>
-            <li><a href="../register/login.html">Log out</a></li>
-        </ul>
-        <div class="form">
-            <i class="fas fa-search"></i>
-        </div>
-    </nav>
-</div>
+    <header>    
+      <div class="container">
+          <a href="#" class="logo">
+              <img decoding="async" src="imgs/Icon.png" alt="Logo" />
+          </a>
+          <nav>
+              <i class="fas fa-bars toggle-menu"></i>
+              <ul>
+                  <li><a class="active" href="User_Home.html">Home</a></li>
+                  <li><a href="userSearchBooks.html">Search</a></li>
+              <li><a href="userViewList.html">View List</a></li>
+              <li><a href="userSelectBook.html">Select a book</a></li>
+              <li><a href="userBorrowBook.html">Borrow Books</a></li>
+              <li><a href="userBookList.html">Your Book</a></li>
+              <li><a href="../register/login.html">Log out</a></li>
+          </ul>
+          <div class="form">
+              <i class="fas fa-search"></i>
+          </div>
+      </nav>
+  </div>
 </header>
 <div class="overlay"></div>
 <div class="content-all">
-                    <center><h1>LIST</h1></center>
-                    <h2>YOUR BOOKS</h2>
+                    <center><h1>Selecting Book</h1></center>
+                    <h2>Books Lists</h2>
                     <ul>
-                                        <li>Tenth of December</li>
-                                        <img height="100" src="81-y8fgFTTL._AC_UF1000,1000_QL80_.jpg" alt="">
-                                        <li>The Remains of the Day</li>
-                                        <img height="100" src="71FYHIsnVIL._AC_UF1000,1000_QL80_.jpg" alt="">
-                                        <li>Things Fall Apart</li>
-                                        <img height="100" src="91NtvTU0xEL._AC_UF1000,1000_QL80_.jpg" alt="">
-                                        <li>Dear Life</li>
-                                        <img height="100" src="images.jpg" alt="">
-                                        <li>A Tale for the Time Being</li>
-                                        <img height="100" src="15811545.jpg" alt="">
-                                        <li>Echoes of Eternity</li>
-                                        <img height="100" src="image.png" alt="">
-
-                                      </ul>
-                                    </div>
-                                    </div>
-
+                      <li>YellowFace</li>
+                      <button type="submit"><a href="yellowface_book.html"">Click to view book details</a></button>
+                      <li>IT</li>
+                      <button type="submit"><a href="cut_book.html">Click to view book details</a></button>
+                      <li>CUT</li>
+                      <button type="submit"><a href="it_book.html">Click to view book details</a></button>
+                    </ul>
+                    
+                  </div>
+               
+                </div>
 </body>
 </html>
