--- a/userViewList.html
+++ b/userViewList.html
@@ -1,24 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-                    <meta charset="UTF-8">
-                    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <title>List user</title>
-</head>
-<body>
-                    <center>        
-                                        <nav>
-                                        <a href="User_Home.html">Home</a>
-                                        <a href="userSearchBooks.html">Search</a>
-                                        <a href="userViewList.html">View List</a>
-                                        <a href="userSelectBook.html">Select a book</a>
-                                        <a href="userBorrowBook.html">Borrow Books</a>
-                                        <a href="userBookList.html">Your Book</a>
-                                        <a href="login.html">Log out</a>
-                                        </nav>
-                    </center>
-                    <center><h1>book List</h1></center>
-<h2>BOOKS</h2>
+    <head>
+        <link rel="stylesheet" href="../css/normalize.css">
+        <link rel="stylesheet" href="../css/all.min.css">
+        <link rel="stylesheet" href="user.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
+        
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>List user</title>
+    </head>
+    <body>
+            <div class="body-color">
+
+    <header>    
+        <div class="container">
+            <a href="#" class="logo">
+                <img decoding="async" src="imgs/Icon.png" alt="Logo" />
+            </a>
+            <nav>
+                <i class="fas fa-bars toggle-menu"></i>
+            <ul>
+                <li><a class="active" href="User_Home.html">Home</a></li>
+                <li><a href="userSearchBooks.html">Search</a></li>
+                <li><a href="userViewList.html">View List</a></li>
+                <li><a href="userSelectBook.html">Select a book</a></li>
+                <li><a href="userBorrowBook.html">Borrow Books</a></li>
+                <li><a href="userBookList.html">Your Book</a></li>
+                <li><a href="../register/login.html">Log out</a></li>
+            </ul>
+            <div class="form">
+                <i class="fas fa-search"></i>
+            </div>
+            </nav>
+        </div>
+    </header>
+
+</div>  
+
+<div class="overlay"></div>
+
+    <div class="content-all">
+
+
+        <div>   <center><h1>book List</h1></center>    </div>
+
+
+
+    <h2>BOOKS</h2>
 <table border="1">
 <thead>
 <tr>
@@ -165,5 +197,6 @@
 </table>
 
 </ul>
+</div>
 </body>
 </html>
