--- a/Admin_Home.html
+++ b/Admin_Home.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
-            ADMIN HOME Page
-        </title>
-        <style></style>
-        <script></script>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Online Book library</title>
+        <meta name="title" content="library">
+        <meta name="description" content="Online Book library">
         <link rel="stylesheet" href="">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
     </head>
-
     <body>
 <center>
     <nav>
@@ -29,6 +32,7 @@
         </form>
         <br>
         <center><img  src="wp9167352.jpg" alt=""></center>
+        <script src="mainUser.js"></script>  
 
     </body>
 </html>
