--- a/login.html
+++ b/login.html
@@ -37,22 +37,22 @@
     <meta charset="utf - 8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login </title>
-<body>
+<body style="background-color: #120069";>
 
     <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action=" method="post" >
         <h2 style="text-align: center;color:white;">LOGIN NOW</h2>
     <div>
     <div>
         <label style="color: white;">Email Addres:</label>
-        <input type="email" required placeholder="email" name="email" >
+        <input type="email" required placeholder="email" name="email" id="email2">
         </div>
         <br>
         <div>
         <label style="color: white;">password:</label>
-        <input type="password" required placeholder="password" name="password" >
+        <input type="password" required placeholder="password" name="password" id="password2">
     </div>
         <br>
-        <input type="submit" value="login ">
+        <input type="submit" onclick="verify()" value="login " id="submit2">
         <input type="reset" value="reset  ">
         <br>
         <hr>
@@ -62,6 +62,7 @@
 
     </div>
 </form>
+    <script src="login.js"></script>
 </body>
 </head>
 </html>
