--- a/userBorrowBook.html
+++ b/userBorrowBook.html
@@ -40,11 +40,11 @@
 <div class="overlay"></div>
 
 <div class="content-all">
-    <h1>Choose a book to borrow</h1>
+    <h2>Choose a book to borrow</h2>
 <br>
     <div class="borrow">
         <label for="borrow">Boook name:  </label>
-        <select name="borrow" id="borrow" required>
+        <select style="border: 1px double   black;" name="borrow" id="borrow" required>
         <option value="" disabled selected> Select </option>
         <option value="1">YellowFace</option>
         <option value="2">Cut  (unavailable)</option>
@@ -57,13 +57,13 @@
 <br>
 <form action="">
     <div>
-        <input type="submit" value="submit">
+        <input style=" left: 50%; transform: translate(-50%); position: relative; border-radius: 8px; border: 1px solid rgb(17, 12, 61); width: fit-content;" type="submit" value="submit">
     </div>
 </form>
 
     <hr>
-    <center>    <h1> <FONT COLOR="RED"> --WARNING--  </FONT></h1>
-        <h2> unavailable books can not be borrowed</h2></center>
+    <center>    <h2> <FONT COLOR="RED"> --WARNING--  </FONT></h2>
+        <h3> unavailable books can not be borrowed</h3></center>
     </div>
 </div>
 </body>
