--- a/userSearchBooks.html
+++ b/userSearchBooks.html
@@ -43,8 +43,8 @@
                     <h2>Search For Book In Library</h2>
                     <hr>
                     <form action="" method="post">
-                    <input type="search" placeholder="Search Book titles or author or category" required>
-                    <input type="submit" value="search">
+                    <input type="search"  style="border: 1px solid rgb(47, 41, 41);" placeholder="Search Book titles or author or category" required >
+                    <input style="border: 2px solid rgb(31, 25, 88) ; border-radius: 10px; width: fit-content ; left: 50%; transform: translate(-50%); position: relative;" type="submit" value="search" >
                     </form>
     </div>
 </div>
