--- a/userSearchBooks.html
+++ b/userSearchBooks.html
@@ -1,52 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="../css/normalize.css">
-    <link rel="stylesheet" href="../css/all.min.css">
-    <link rel="stylesheet" href="user.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
-
+  <link rel="stylesheet" href="../css/normalize.css">
+  <link rel="stylesheet" href="../css/all.min.css">
+  <link rel="stylesheet" href="user.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0..1,0" />
                     <meta charset="UTF-8">
                     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-                    <title>Document</title>
+                    <title>user select book</title>
 </head>
 <body>
-    <div class="body-color">
+  <div class="body-color">
     <header>    
-        <div class="container">
-            <a href="#" class="logo">
-                <img decoding="async" src="imgs/Icon.png" alt="Logo" />
-            </a>
-            <nav>
-                <i class="fas fa-bars toggle-menu"></i>
-                <ul>
-                    <li><a class="active" href="User_Home.html">Home</a></li>
-                    <li><a href="userSearchBooks.html">Search</a></li>
-                <li><a href="userViewList.html">View List</a></li>
-                <li><a href="userSelectBook.html">Select a book</a></li>
-                <li><a href="userBorrowBook.html">Borrow Books</a></li>
-                <li><a href="userBookList.html">Your Book</a></li>
-                <li><a href="../register/login.html">Log out</a></li>
-            </ul>
-            <div class="form">
-                <i class="fas fa-search"></i>
-            </div>
-        </nav>
-    </div>
+      <div class="container">
+          <a href="#" class="logo">
+              <img decoding="async" src="imgs/Icon.png" alt="Logo" />
+          </a>
+          <nav>
+              <i class="fas fa-bars toggle-menu"></i>
+              <ul>
+                  <li><a class="active" href="User_Home.html">Home</a></li>
+                  <li><a href="userSearchBooks.html">Search</a></li>
+              <li><a href="userViewList.html">View List</a></li>
+              <li><a href="userSelectBook.html">Select a book</a></li>
+              <li><a href="userBorrowBook.html">Borrow Books</a></li>
+              <li><a href="userBookList.html">Your Book</a></li>
+              <li><a href="../register/login.html">Log out</a></li>
+          </ul>
+          <div class="form">
+              <i class="fas fa-search"></i>
+          </div>
+      </nav>
+  </div>
 </header>
 <div class="overlay"></div>
-<div class="content-all"> 
-                    <center><h1>Search</h1></center>
-                    <h2>Search For Book In Library</h2>
-                    <hr>
-                    <form action="" method="post">
-                    <input type="search"  style="border: 1px solid rgb(47, 41, 41);" placeholder="Search Book titles or author or category" required >
-                    <input style="border: 2px solid rgb(31, 25, 88) ; border-radius: 10px; width: fit-content ; left: 50%; transform: translate(-50%); position: relative;" type="submit" value="search" >
-                    </form>
-    </div>
-</div>
+<div class="content-all">
+                    <center><h1>Selecting Book</h1></center>
+                    <h2>Books Lists</h2>
+                    <ul>
+                      <li>YellowFace</li>
+                      <button type="submit"><a style="border: solid rgb(24, 61, 90) 2px; border-radius: 3px;" href="yellowface_book.html"">Click to view book details</a></button>
+                      <li>IT</li>
+                      <button type="submit"><a style="border: solid rgb(24, 61, 90) 2px; border-radius: 3px;" href="cut_book.html">Click to view book details</a></button>
+                      <li >CUT</li>
+                      <button type="submit"><a style="border: solid rgb(24, 61, 90) 2px; border-radius: 3px;" href="it_book.html">Click to view book details</a></button>
+                    </ul>
+                    
+                  </div>
+               
+                </div>
 </body>
 </html>
