--- a/userSelectBook.html
+++ b/userSelectBook.html
@@ -42,11 +42,11 @@
                     <h2>Books Lists</h2>
                     <ul>
                       <li>YellowFace</li>
-                      <button type="submit"><a href="yellowface_book.html"">Click to view book details</a></button>
+                      <button type="submit"><a style="border: solid rgb(24, 61, 90) 2px; border-radius: 3px;" href="yellowface_book.html"">Click to view book details</a></button>
                       <li>IT</li>
-                      <button type="submit"><a href="cut_book.html">Click to view book details</a></button>
-                      <li>CUT</li>
-                      <button type="submit"><a href="it_book.html">Click to view book details</a></button>
+                      <button type="submit"><a style="border: solid rgb(24, 61, 90) 2px; border-radius: 3px;" href="cut_book.html">Click to view book details</a></button>
+                      <li >CUT</li>
+                      <button type="submit"><a style="border: solid rgb(24, 61, 90) 2px; border-radius: 3px;" href="it_book.html">Click to view book details</a></button>
                     </ul>
                     
                   </div>
