--- a/adminAddBooks.html
+++ b/adminAddBooks.html
@@ -4,81 +4,118 @@
         <title>
             ADD BOOKS Page
         </title>
-        <style></style>
-        <script></script>
-        <link rel="stylesheet" href="">
+        <link rel="stylesheet" href="/css/all.min.css">
+        <link rel="stylesheet" href="/css/normalize.css">
+        <link rel="stylesheet" href="css/design.css">
+        <script src="js/script.js"></script>
     </head>
 
     <body>
+        <div class="overlay"></div>
         <nav>
-<center>
-    <nav>
-        <a href="Admin_Home.html">Home</a>
-        <a href="adminAddBooks.html">Add Books</a>
-        <a href="adminEditBooks.html">Edit Books</a>
-        <a href="adminDeleteBooks.html">Delete Books</a>
-          <a href="login.html">Log out</a>
-    </nav>
-</center>
+            <ul>
+                <li><a href="Admin_Home.html">ELBTNGANA Bookstore</a></li>
+                <li><a href="adminAddBooks.html">Add Books</a></li>
+                <li><a href="adminEditBooks.html">Edit Books</a></li>
+                <li><a href="adminDeleteBooks.html" class="active">Delete Books</a></li>
+                <li><a href="adminSearchBooks.html">Search For Books</a></li>
+                <li><a href="login.html">Log out</a></li>
+                <li onclick="openSideBar()"><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg></a></li>
+            </ul>
+            <ul class="sidebar">
+                <li><a href="Admin_Home.html">ELBTNGANA Bookstore</a></li>
+                <li><a href="adminAddBooks.html">Add Books</a></li>
+                <li><a href="adminEditBooks.html">Edit Books</a></li>
+                <li><a href="adminDeleteBooks.html" class="active">Delete Books</a></li>
+                <li><a href="adminSearchBooks.html">Search For Books</a></li>
+                <li><a href="login.html">Log out</a></li>
+                <li><a href=""><svg xmlns="http://www.w3.org/2000/svg" height="24" viewBox="0 -960 960 960" width="24"><path d="m256-200-56-56 224-224-224-224 56-56 224 224 224-224 56 56-224 224 224 224-56 56-224-224-224 224Z"/></svg></a></li>
+            </ul>
+        </nav>
 
-        <h1>Add Books</h1>
-        <h2>Add Book to Library</h2>
-        <hr>
-        <h3>Please enter Book Details</h3>
-
-        <form action="" method="post">
-            <div class="bookcover">
-                <label for="bcvr">Book Cover:</label>
-                <br>
-                <input type="file" id="bcvr" accept="image/*" >
-            </div>
-            <hr>
-            <div class="bookname">
-                <label for="bname">Book Name:</label>
-                <input type="text" id="bname" placeholder="Please Enter Book Name" required>
-            </div>
-            <br>
-            <div class="bookid">
-                <label for="isbn">Book Id:</label>
-                <input type="text" id="isbn" placeholder="Please Enter ISBN" pattern="(\d{9}[\dXx])|(\d{13})" required>
-            </div>
-            <br>
-            <div class="authorname">
-                <label for="author">Author Name:</label>
-                <input type="text" id="author" placeholder="Please Enter author Name" required>
-            </div>
-            <br>
-            <div class="bookcategory">
-                <label for="category">Category:</label>
-                <select id="category" name="Genre: " required>
-                    <option value="" disabled selected > Select Category</option>
-                    <option value="1">Action and Adventure</option>
-                    <option value="2">Biography</option>
-                    <option value="3">Children's</option>
-                    <option value="4">Classic</option>
-                    <option value="5">Comic Book</option>
-                    <option value="6">Detective And Mystery</option>
-                    <option value="7">Fantasy</option>
-                    <option value="8">Historical Fiction</option>
-                    <option value="9">Horror</option>
-                    <option value="10">Humor</option>
-                    <option value="11">Literary Fiction</option>
-                    <option value="12">Romance</option>
-                    <option value="13">Sci-Fi</option>
-                    <option value="14">Short Story</option>
-                    <option value="15">Thriller</option>
-                </select>
-            </div>
-            <br>
-            <div class="bookdescription">
-                <label for="dscrb">Enter Description:</label>
-                <br>
-                <textarea name="Description" id="dscrb" cols="30" rows="10" placeholder="Please Enter Description"></textarea>
-            </div>
-            <br>
+        <div class="addContent">
             <div>
-                <input type="submit"">
+            <h1>Add Book to Library</h1>
+            <br>
+            <h3 style="border-bottom: solid 1px; width: fit-content;">Please enter Book Details:</h3>
+            <br>
+
+            <form action="" method="post">
+                <div class="bookcover">
+                    <label for="bcvr" >Book Cover:</label>
+                    <br>
+                    <input type="file" id="bcvr" accept="image/*" >
+                </div>
+                <br>
+                <div class="bookname">
+                    <label for="bname">Book Name:</label>
+                    <input type="text" id="bname" placeholder="Please Enter Book Name" required>
+                </div>
+                <br>
+                <div class="bookid">
+                    <label for="isbn">Book Id:</label>
+                    <input type="text" id="isbn" placeholder="Please Enter ISBN" pattern="(\d{9}[\dXx])|(\d{13})" required>
+                </div>
+                <br>
+                <div class="authorname">
+                    <label for="author">Author Name:</label>
+                    <input type="text" id="author" placeholder="Please Enter author Name" required>
+                </div>
+                <br>
+                <div class="bookcategory">
+                    <label for="category">Category:</label>
+                    <select id="category" name="Genre: " required>
+                        <option value="" disabled selected > Select Category</option>
+                        <option value="1">Action and Adventure</option>
+                        <option value="2">Biography</option>
+                        <option value="3">Children's</option>
+                        <option value="4">Classic</option>
+                        <option value="5">Comic Book</option>
+                        <option value="6">Detective And Mystery</option>
+                        <option value="7">Fantasy</option>
+                        <option value="8">Historical Fiction</option>
+                        <option value="9">Horror</option>
+                        <option value="10">Humor</option>
+                        <option value="11">Literary Fiction</option>
+                        <option value="12">Romance</option>
+                        <option value="13">Sci-Fi</option>
+                        <option value="14">Short Story</option>
+                        <option value="15">Thriller</option>
+                    </select>
+                </div>
+                <br>
+                <div class="bookdescription">
+                    <label for="dscrb">Enter Description:</label>
+                    <br>
+                    <textarea name="Description" id="dscrb" cols="50" rows="15" placeholder="Please Enter Description"></textarea>
+                </div>
+                <br>
+                <div>
+                    <input type="submit"">
+                </div>
+            </form>
             </div>
-        </form>
+            <div><img src="imgs/Z.png" alt=""></div>
+        </div>
+        
+        <!-- <footer class="footer">
+            <div class="container">
+                <p>&copy; 2024 Your Website. All rights reserved.</p>
+                <ul class="footer-links">
+                    <li><a href="#">Terms of Service</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                    <li><a href="#">Contact Us</a>            <div class="contact-info">
+                        <p>Email: </p>
+                        <p>Phone: </p>
+                        <p>Address: </p>
+                        <p>Social Media:</p>
+                        <p>Twitter: </p>
+                        <p>Facebook: </p>
+                        <p>Instagram: </p>
+                    </div>
+                    </li>
+                </ul>
+            </div>
+        </footer> -->
     </body>
 </html>
