--- a/login.html
+++ b/login.html
@@ -1,45 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf - 8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Login </title>
-<body>
-
-    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-color: #eee;padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action=" method="post" >
-        <h2 style="text-align: center;">LOGIN NOW</h2>
-    <div>
-    <div>
-        <label>Email Addres:</label>
-        <input type="email" required placeholder="email" name="email" >
-        </div>
-        <br>
-        <div>
-        <label>password:</label>
-        <input type="password" required placeholder="password" name="password" >
-    </div>
-        <br>
-        <input type="submit" value="login ">
-        <input type="reset" value="reset  ">
-        <br>
-        <hr>
-        <span>don’t have an account?</span>
-        <a href="SignUp.html" class="#">sign up</a>
-
-
-    </div>
-</form>
-</body>
-</head>
-</html><!DOCTYPE html>
-<html>
-<head>
-    <meta charset="utf - 8" />
+    <meta charset="utf - 8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login </title>
 <body style="background-color: #120069";>
 
-    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);padding: 25px;border: 1px solid #0000005c;border-radius: 15px" action=" method="post" >
+    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);padding: 25px;border: 1px solid #0000005c;border-radius: 15px"  method="post" >
         <h2 style="text-align: center;color:white;">LOGIN NOW</h2>
     <div>
     <div>
