--- a/login.html
+++ b/login.html
@@ -4,9 +4,9 @@
     <meta charset="utf - 8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login </title>
-<body style="background-color: #120069";>
+<body style="background-image: url(imgs/ryunosuke-kikuno-FKqxZ58bVjU-unsplash.jpg); background-size:cover ;">
 
-    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);padding: 25px;border: 1px solid #0000005c;border-radius: 15px"  method="post" >
+    <form style="position: absolute;top: 50%;left: 50%;transform: translate(-50% , -50%);background-image: linear-gradient(270deg, #0f4392, #001d3d, #001d3d);padding: 25px;border: 1px solid #0000005c;border-radius: 15px; width: 300px; height: 25vh; box-shadow: 4px 3px 1px 4px rgba(0, 0, 0, 1);"  method="post" >
         <h2 style="text-align: center;color:white;">LOGIN NOW</h2>
     <div>
     <div>
